--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 
 - title: Home
   url: /
-#- title: Researches
-#   url: /researches/
+- title: Researches
+   url: /researches/
 #- title: CV
 #   url: /cv/
 # - title: Tags
