--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale: en-US
 title: "Chengyan Xie"
 description: "Personal website"
 baseurl: # the subpath of your site, e.g. "/blog"
-url: # the base hostname & protocol for your site e.g. "https://wddlx.github.io"
+url: "https://wddlx.github.io"
 logo: # path of site logo, e.g. "/images/logo.png"
 date_format: "%B %-d, %Y"
 read_time: # reading time estimates, e.g. true
