--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@
   url: /
 #- title: Researches
 #   url: /researches/
-#- title: CV
-#   url: /CV.pdf
+- title: CV
+   url: /CV.pdf
 # - title: Tags
 #   url: /tags/
 # - title: Recipes
