--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,10 +2,10 @@
 
 - title: Home
   url: /
-#- title: Researches
-#   url: /researches/
-- title: CV
-   url: /CV.pdf
+- title: Researches
+   url: /research.html
+#- title: CV
+#   url: /CV.pdf
 # - title: Tags
 #   url: /tags/
 # - title: Recipes
