--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@
 - title: Home
   url: /
 - title: Researches
-   url: /research.html
+   url: /_posts/
 #- title: CV
 #   url: /CV.pdf
 # - title: Tags
